<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pant_description</name>
  <version>1.0.0</version>
  <description>Description package for demo scara robot</description>
  <maintainer email="macbednarczyk@gmail.com">Maciej Bednarczyk</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>xacro</exec_depend>
  <exec_depend>urdf</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>